objects/Interview_Answer__c.object
<CustomObject>
    <description>Answers to interview questions</description>
    <label>Interview Answer</label>
    <nameField>
        <label>Interview Question #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Score_1__c</fullName>
        <description>Score for the answer. 1 is unsatisfactory and 5 is perfect</description>
        <inlineHelpText>Score for the answer. 1 is unsatisfactory and 5 is perfect</inlineHelpText>
        <label>Score 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_2__c</fullName>
        <description>Score for the answer. 1 is unsatisfactory and 5 is perfect</description>
        <inlineHelpText>Score for the answer. 1 is unsatisfactory and 5 is perfect</inlineHelpText>
        <label>Score 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_3__c</fullName>
        <description>Score for the answer. 1 is unsatisfactory and 5 is perfect</description>
        <inlineHelpText>Score for the answer. 1 is unsatisfactory and 5 is perfect</inlineHelpText>
        <label>Score 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Interview_Question__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_Score__c</fullName>
        <description>The average score received by all interviewers</description>
        <formula>(IF(!ISBLANK(TEXT(Score_1__c)), VALUE(TEXT(Score_1__c)), 0)+IF(!ISBLANK(TEXT(Score_2__c)), VALUE(TEXT(Score_2__c)), 0)+IF(!ISBLANK(TEXT(Score_3__c)), VALUE(Text(Score_3__c)), 0)) / 
(IF(!ISBLANK(TEXT(Score_1__c)), 1, 0)+IF(!ISBLANK(TEXT(Score_2__c)), 1, 0)+IF(!ISBLANK(TEXT(Score_3__c)), 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The average score received by all interviewers</inlineHelpText>
        <label>Avg. Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The candidate that answered the question</description>
        <inlineHelpText>The candidate that answered the question</inlineHelpText>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Interview Answers</relationshipLabel>
        <relationshipName>Interview_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Answer_notes__c</fullName>
        <description>Notes about the candidate&apos;s answer</description>
        <inlineHelpText>Notes about the candidate&apos;s answer</inlineHelpText>
        <label>Answer notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <description>The job application that these questions were asked for</description>
        <inlineHelpText>The job application that these questions were asked for</inlineHelpText>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Interview Answers</relationshipLabel>
        <relationshipName>Interview_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score_2_Populated__c</fullName>
        <description>Is the Score 2 Field populated?</description>
        <formula>Not(ISBLANK(TEXT( Score_2__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Score 2 Field populated?</inlineHelpText>
        <label>Score 2 Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interview_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The question that was asked</description>
        <inlineHelpText>The question that was asked</inlineHelpText>
        <label>Interview Question</label>
        <referenceTo>Interview_Question__c</referenceTo>
        <relationshipLabel>Interview Answers</relationshipLabel>
        <relationshipName>Interview_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>